<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".presentation.GameFinishedFragment">

    <ImageView
        android:id="@+id/emoji_result"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="48dp"
        android:contentDescription="@string/game_over"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/ic_smile"
        />

    <TextView
        android:id="@+id/tv_required_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_required_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_scope_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tv_scope_answers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_scope"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_required_percentage"
        app:layout_constraintEnd_toEndOf="@+id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@+id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
        />

    <TextView
        android:id="@+id/tv_required_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/good_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_scope_percentage"
        app:layout_constraintEnd_toEndOf="@+id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@+id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@+id/tv_scope_answers"
        />

    <TextView
        android:id="@+id/tv_scope_percentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/need_good_answers"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_required_answers"
        app:layout_constraintStart_toStartOf="@+id/tv_required_answers"
        app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage"
        />

    <Button
        android:id="@+id/button_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_retry_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>